Assignment #7/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;E:\Problem Solving and Programming\Assignments\Assignment #7\Assignment #7
-d
E:\Problem Solving and Programming\Assignments\Assignment #7\Assignment #7\doc
-encoding
UTF-8
-charset
UTF-8
E:\Problem Solving and Programming\Assignments\Assignment #7\Assignment #7\Password.java
<---- end of javadoc command ---->
Loading source file E:\Problem Solving and Programming\Assignments\Assignment #7\Assignment #7\Password.java...
E:\Problem Solving and Programming\Assignments\Assignment #7\Assignment #7\Password.java:16: error: ')' expected
        int[] password = (5,4,4,4,3);
                           ^
E:\Problem Solving and Programming\Assignments\Assignment #7\Assignment #7\Password.java:16: error: <identifier> expected
        int[] password = (5,4,4,4,3);
                            ^
E:\Problem Solving and Programming\Assignments\Assignment #7\Assignment #7\Password.java:23: error: ')' expected
        int[] tens = (10000,1000,100,10);
                           ^
E:\Problem Solving and Programming\Assignments\Assignment #7\Assignment #7\Password.java:23: error: <identifier> expected
        int[] tens = (10000,1000,100,10);
                            ^
4 errors
